tests/negative/try_unmatched.rkl
(try VALUE_EXCEPTION (get Nil 0))
